--- a/econ_3_problemset.Rmd
+++ b/econ_3_problemset.Rmd
@@ -9,22 +9,29 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+#set up 
+library(tidyverse)
+library(rootSolve)
+library(reconPlots)
 ```
 
-## Including Plots
+```{r}
+#read in data
+whale_data <- read.csv("HW3Data.csv")
+whale_data
+#create regression model 
+#risk 
+#bid (annual payment for household, WTP)
+#vote
+#NEP (measure of environmental concern)
+#income
+#age
 
-You can also embed plots, for example:
+ 
+# A. Saturated model: contains all predictor variables 
+whale_lm1 <- lm(vote ~ risk + bid + NEP + income + age , data = whale_data)
+whale_lm1
 
-```{r pressure, echo=FALSE}
-plot(pressure)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
