--- a/econ_3_problemset.Rmd
+++ b/econ_3_problemset.Rmd
@@ -21,7 +21,7 @@ library(reconPlots)
 whale_data <- read.csv("HW3Data.csv")
 whale_data
 
-#PART 1##########
+#1. Create a linear probability model that predicts a respondent’s probability of voting ‘yes’ on the ballot based on their age, income, NEP score, the risk reduction offered by the program, and the cost of the program to that respondent. Show the model and interpret the regression coefficients.
 
 #create regression model:
 
@@ -92,5 +92,9 @@ wtp_one_whale <- bid_zero - bid_four
 wtp_one_whale #2.7834 
 
 
+```
+
+```{r}
+#3. Pick three arbitrary respondents. For each of those respondents, estimate their WTP for a VSR program offering 60% risk reduction.
 ```
 
