--- a/econ_3_problemset.Rmd
+++ b/econ_3_problemset.Rmd
@@ -55,7 +55,6 @@ age_to30 <-  whale_lm1$coefficients[12]
 #Income: Middle
 #Age: over sixty 
 
-
 ```
 
 ```{r}
@@ -76,6 +75,7 @@ tot_ave_nep # 38.366
 
 #Average Vote: 0.714
 #Average NEP: 38.366
+#Assuming age to 30 and poor income. 
 
 #0%
 bid_zero <- (intercept + age_to30 + income_poor + (nep*tot_ave_nep) + (risk*0) - tot_ave_vote)/bid
