--- a/econ_3_problemset.Rmd
+++ b/econ_3_problemset.Rmd
@@ -21,6 +21,8 @@ library(reconPlots)
 whale_data <- read.csv("HW3Data.csv")
 whale_data
 
+#testing new git
+
 #1. Create a linear probability model that predicts a respondent’s probability of voting ‘yes’ on the ballot based on their age, income, NEP score, the risk reduction offered by the program, and the cost of the program to that respondent. Show the model and interpret the regression coefficients.
 
 #create regression model:
